# OCR_Japanease

./: pyproject.toml
